# okiru-pro-main

./: .aks_env  .dockerignore  .gitignore  .last-image-tag  .npmrc  .replit  AZURE-AKS-DEPLOYMENT-GUIDE.md  BEE_TOOLKIT_FIXES_LOG.md  BUG_REPORT.md  CODEOWNERS  CODE_REVIEW.md  COMMIT.BAT  CREATE_BRANCH.BAT  ComplianceHub_Landing.html  DELETE_VM.BAT  DEPLOYMENT.md  ENTERPRISE_SECURITY_REVIEW.md  Goal.md  RERUN_WORKFLOW.ps1  RUN_ME.ps1  SAFETY_IMPROVEMENTS.md  TASKS.md  TEST_REPORT.md  acr-build-log.txt  acr-df92.txt  az_accounts.json  build-log.json  build-log.txt  build-run-details.txt  build_err.json  build_log.txt  catalog.json  catalog.registry.schema.json  catalog.schema.json  check-503-issue.ps1  check-production.ps1  check-vm.ps1  deploy.ps1  deploy.sh  docker-compose.production.yml  (+18 more)
.agents/: agent_assets_metadata.toml
api/: health.ts
attached_assets/: ARCHITECTURE_1777594188134.md  CHANGELOG_1777594210242.md  CONFIG_1777594210243.md  CONSTRUCTION_QUALIFYING_SMALL_ENTERPRISE_(QSE)_SCORECARD_(1)_1778617304452.docx  Construction_sector_codes_(1)_1778617304454.docx  DESIGN_1777040430230.md  Info_Request_Sheet_Template_1778866367857.xlsx  JIRA-DATA-LAYER-BACKLOG_1777594210244.md  MIGRATION-PLAYBOOK_1777594210245.md  PUBLISHING_1777594210246.md  Pasted--C-dev-okiru-pro-main-powershell-NoProfile-Command-f-ku_1777156867448.txt  Pasted-Act-as-a-senior-enterprise-security-architect-and-backe_1777504030404.txt  Pasted-Company-Onboarding-Form-Updated-1-Company-Name-Question_1777904384682.txt  Pasted-Debug-production-frontend-crash-undefined-length-and-AP_1775058649853.txt  (+24 more)
(+751 files in other folders)
