[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.1",
    "networkx==3.2",
    "openpyxl==3.1.2",
    "pydantic-settings==2.3.0",
    "pytest>=9.0.2",
    "python-arango==8.0.0",
    "python-dotenv>=1.2.2",
    "requests==2.31.0",
    "uvicorn[standard]==0.24.0",
    "xlcalculator==0.5.0",
]
